--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,5 +1,2 @@
-{% extends 'base.html' %}
+{% extends 'main/templates/base.html' %}
 
-{% block content %}
-  <p>This is my home page content!</p>
-{% endblock %}
